cmake_minimum_required(VERSION 3.14)
project(example_algo)

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_BUILD_TYPE RELEASE)
include_directories(.)

add_executable(31 paixu/31/31.cpp)
add_executable(5 paixu/5/5.cpp)
add_executable(58 paixu/58/58.cpp)
add_executable(59 paixu/59/59.cpp)
add_executable(139 paixu/139/139.cpp)
add_executable(143 paixu/143/143.cpp)
add_executable(148 paixu/148/148.cpp)
add_executable(184 paixu/184/184.cpp)
add_executable(387 paixu/387/387.cpp)
add_executable(400 paixu/400/400.cpp)
add_executable(507 paixu/507/507.cpp)
add_executable(508 paixu/508/508.cpp)
add_executable(912 paixu/912/912.cpp)
add_executable(919 paixu/919/919.cpp)
add_executable(1477 paixu/1477/1477.cpp)
add_executable(1499 paixu/1499/1499.cpp)

add_executable(20 dongtaiguihua/20.cpp)
add_executable(43 dongtaiguihua/43.cpp)
add_executable(77 dongtaiguihua/77.cpp)
add_executable(125 dongtaiguihua/125.cpp)
add_executable(1016 dongtaiguihua/1016.cpp)
add_executable(1711 dongtaiguihua/1711.cpp)
add_executable(785 dongtaiguihua/785.cpp)
add_executable(1284 dongtaiguihua/1284.cpp)
add_executable(1018 dongtaiguihua/1018.cpp)
add_executable(1026 dongtaiguihua/1026.cpp)
add_executable(1111 dongtaiguihua/1111.cpp)
add_executable(669 dongtaiguihua/669.cpp)
add_executable(843 dongtaiguihua/843.cpp)
add_executable(534 dongtaiguihua/534.cpp)
add_executable(564 dongtaiguihua/564.cpp)
add_executable(752 dongtaiguihua/752.cpp)
add_executable(395 dongtaiguihua/395.cpp)
add_executable(1156 dongtaiguihua/1156.cpp)
add_executable(700 dongtaiguihua/700.cpp)
add_executable(740 dongtaiguihua/740.cpp)
add_executable(1208 dongtaiguihua/1208.cpp)
add_executable(975 dongtaiguihua/975.cpp)
add_executable(683 dongtaiguihua/683.cpp)
add_executable(437 dongtaiguihua/437.cpp)
add_executable(1164 dongtaiguihua/1164.cpp)
add_executable(1000 dongtaiguihua/1000.cpp)
add_executable(512 dongtaiguihua/512.cpp)
add_executable(562 dongtaiguihua/562.cpp)
add_executable(800 dongtaiguihua/800.cpp)
add_executable(864 dongtaiguihua/864.cpp)
add_executable(869 dongtaiguihua/869.cpp)
add_executable(476 dongtaiguihua/476.cpp)
add_executable(664 dongtaiguihua/664.cpp)
add_executable(1223 dongtaiguihua/1223.cpp)
add_executable(107 dongtaiguihua/107.cpp)
add_executable(191 dongtaiguihua/191.cpp)
add_executable(163 dongtaiguihua/163.cpp)
add_executable(603 dongtaiguihua/603.cpp)
add_executable(1093 dongtaiguihua/1093.cpp)
add_executable(1004 dongtaiguihua/1004.cpp)
add_executable(668 dongtaiguihua/668.cpp)
add_executable(192 dongtaiguihua/192.cpp)
add_executable(857 dongtaiguihua/857.cpp)
add_executable(867 dongtaiguihua/867.cpp)
add_executable(1432 dongtaiguihua/1432.cpp)
add_executable(1850 dongtaiguihua/1850.cpp)
add_executable(1707 dongtaiguihua/1707.cpp)
add_executable(588 dongtaiguihua/588.cpp)
add_executable(1800 dongtaiguihua/1800.cpp)
add_executable(622 dongtaiguihua/622.cpp)
add_executable(602 dongtaiguihua/602.cpp)
add_executable(1556 dongtaiguihua/1556.cpp)
add_executable(1054 dongtaiguihua/1054.cpp)
add_executable(1582 dongtaiguihua/1582.cpp)
add_executable(974 dongtaiguihua/974.cpp)
add_executable(1869 dongtaiguihua/1869.cpp)
add_executable(1387 dongtaiguihua/1387.cpp)
add_executable(1497 dongtaiguihua/1497.cpp)

add_executable(1210 DFS/1210.cpp)
add_executable(153 DFS/153.cpp)
add_executable(778 DFS/778.cpp)
add_executable(136 DFS/136.cpp)
add_executable(1428 DFS/1428.cpp)
add_executable(1288 DFS/1288.cpp)
add_executable(677 DFS/677.cpp)
add_executable(570 DFS/570.cpp)
add_executable(790 DFS/790.cpp)
add_executable(477 DFS/477.cpp)
add_executable(90 DFS/90.cpp)
add_executable(1031 DFS/1031.cpp)
add_executable(1220 DFS/1220.cpp)
add_executable(680 DFS/680.cpp)
add_executable(1353 DFS/1353.cpp)
add_executable(760 DFS/760.cpp)
add_executable(650 DFS/650.cpp)
add_executable(878 DFS/878.cpp)
add_executable(178 DFS/178.cpp)
add_executable(1647 DFS/1647.cpp)
add_executable(1101 DFS/1101.cpp)
add_executable(1015 DFS/1015.cpp)
add_executable(1244 DFS/1244.cpp)
add_executable(860 DFS/860.cpp)
add_executable(1189 DFS/1189.cpp)
add_executable(1114 DFS/1114.cpp)
add_executable(582 DFS/582.cpp)
add_executable(780 DFS/780.cpp)
add_executable(653 DFS/653.cpp)
add_executable(1221 DFS/1221.cpp)

add_executable(787 BFS/787.cpp)
add_executable(1002 BFS/1002.cpp)
add_executable(71 BFS/71.cpp)
add_executable(1029 BFS/1029.cpp)
add_executable(726 BFS/726.cpp)
add_executable(127 BFS/127.cpp)
add_executable(70 BFS/70.cpp)
add_executable(176 BFS/176.cpp)
add_executable(814 BFS/814.cpp)
add_executable(1298 BFS/1298.cpp)
add_executable(605 BFS/605.cpp)

add_executable(169 huisu/169.cpp)
add_executable(152 huisu/152.cpp)
add_executable(135 huisu/135.cpp)
add_executable(427 huisu/427.cpp)
add_executable(426 huisu/426.cpp)
add_executable(425 huisu/425.cpp)
add_executable(913 huisu/913.cpp)
add_executable(917 huisu/917.cpp)
add_executable(990 huisu/990.cpp)

add_executable(383 TwoPointer/383.cpp)
add_executable(144 TwoPointer/144.cpp)
add_executable(32 TwoPointer/32.cpp)
add_executable(460 TwoPointer/460.cpp)
add_executable(415 TwoPointer/415.cpp)
add_executable(406 TwoPointer/406.cpp)
add_executable(608 TwoPointer/608.cpp)
add_executable(384 TwoPointer/384.cpp)
add_executable(883 TwoPointer/883.cpp)
add_executable(1045 TwoPointer/1045.cpp)
add_executable(1075 TwoPointer/1075.cpp)
add_executable(1169 TwoPointer/1169.cpp)
add_executable(1601 TwoPointer/1601.cpp)
add_executable(386 TwoPointer/386.cpp)
add_executable(1187 TwoPointer/1187.cpp)
add_executable(918 TwoPointer/918.cpp)
add_executable(1719 TwoPointer/1719.cpp)
add_executable(1246 TwoPointer/1246.cpp)
add_executable(944 TwoPointer/944.cpp)
add_executable(1712 TwoPointer/1712.cpp)

add_executable(182 tanxin/182.cpp)
add_executable(117 tanxin/117.cpp)
add_executable(187 tanxin/187.cpp)
add_executable(412 tanxin/412.cpp)
add_executable(945 tanxin/945.cpp)
add_executable(791 tanxin/791.cpp)
add_executable(743 tanxin/743.cpp)
add_executable(1242 tanxin/1242.cpp)
add_executable(1252 tanxin/1252.cpp)
add_executable(1498 tanxin/1498.cpp)
add_executable(1232 tanxin/1232.cpp)
add_executable(693 tanxin/693.cpp)
add_executable(1309 tanxin/1309.cpp)

add_executable(428 erfen/428.cpp)
add_executable(1492 erfen/1492.cpp)
add_executable(1241 erfen/1241.cpp)
add_executable(248 erfen/248.cpp)
add_executable(1303 erfen/1303.cpp)
add_executable(28 erfen/28.cpp)
add_executable(1219 erfen/1219.cpp)
add_executable(160 erfen/160.cpp)
add_executable(414 erfen/414.cpp)
add_executable(205 erfen/205.cpp)
add_executable(194 erfen/194.cpp)
add_executable(1183 erfen/1183.cpp)
add_executable(1816 erfen/1816.cpp)
add_executable(1536 erfen/1536.cpp)
add_executable(617 erfen/617.cpp)

add_executable(200 zifuchuan/200.cpp)
add_executable(879 zifuchuan/879.cpp)
add_executable(1109 zifuchuan/1109.cpp)
add_executable(891 zifuchuan/891.cpp)
add_executable(978 zifuchuan/978.cpp)
add_executable(1372 zifuchuan/1372.cpp)
add_executable(880 zifuchuan/880.cpp)
add_executable(1024 zifuchuan/1024.cpp)
add_executable(78 zifuchuan/78.cpp)
add_executable(1261 zifuchuan/1261.cpp)
add_executable(1110 zifuchuan/1110.cpp)

add_executable(518 math/518.cpp)
add_executable(704 math/704.cpp)
add_executable(776 math/776.cpp)
add_executable(1836 math/1836.cpp)
add_executable(1256 math/1256.cpp)
add_executable(729 math/729.cpp)
add_executable(1267 math/1267.cpp)
add_executable(982 math/982.cpp)

add_executable(411 digui/411.cpp)
add_executable(822 digui/822.cpp)
add_executable(371 digui/371.cpp)

add_executable(706 erjinzhi/706.cpp)
add_executable(782 erjinzhi/782.cpp)
add_executable(1304 erjinzhi/1304.cpp)
add_executable(1333 erjinzhi/1333.cpp)
add_executable(1296 erjinzhi/1296.cpp)
add_executable(1217 erjinzhi/1217.cpp)