cmake_minimum_required(VERSION 3.14)
project(jianzhioffer)

set(CMAKE_CXX_STANDARD 14)
include_directories(.)

add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3_1 3_1.cpp)
add_executable(3_2 3_2.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
add_executable(7 7.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(18_01 18_01.cpp)
add_executable(21 21.cpp)
add_executable(22 22.cpp)
add_executable(23 23.cpp)
add_executable(24 24.cpp)
add_executable(25 25.cpp)
add_executable(26 26.cpp)
add_executable(27 27.cpp)
add_executable(28 28.cpp)
add_executable(30 30.cpp)
add_executable(33 33.cpp)
add_executable(34 34.cpp)
add_executable(36 36.cpp)
add_executable(41 41.cpp)
add_executable(49 49.cpp)
add_executable(52 52.cpp)
add_executable(57_01 57_01.cpp)
add_executable(59_02 59_02.cpp)