cmake_minimum_required(VERSION 2.8)
project(lintcode)

set(CMAKE_CXX_STANDARD 11)

find_package(Eigen3)
find_package(OpenCV)

include_directories(
        ${PROJECT_SOURCE_DIR}
        ${EIGEN3_INCLUDE_DIR}
)

add_executable(last_zero ./last_zero/last_zero.cpp)
add_executable(rotata_string ./rotata_string/rotate_string.cpp)
add_executable(find_string ./find_string/find_string.cpp)
add_executable(count_num ./count_num/count_num.cpp)
add_executable(full_data_sort ./full_data_sort/full_data_sort.cpp)
add_executable(subset ./subset/subset.cpp)
add_executable(n_queen ./n_queen/n_queen.cpp)
add_executable(largest_path_binary_tree ./largest_path_binary_tree/largest_path_binary_tree.cpp)
add_executable(ladder_length ./ladder_length/ladder_length.cpp)
add_executable(class_schedule ./class_schedule/class_schedule.cpp)
add_executable(search_word ./search_word/search_word.cpp)
add_executable(jump_game ./jump_game/jump_game.cpp)
add_executable(robbery ./robbery/robbery.cpp)
add_executable(edit_distance ./edit_distance/edit_distance.cpp)
add_executable(house_dyeing ./house_dyeing/house_dyeing.cpp)
add_executable(max_square ./max_square/max_square.cpp)
add_executable(perfect_square ./perfect_square/perfect_square.cpp)
add_executable(stack_queue ./stack_queue/stack_queue.cpp)
add_executable(min_stack ./min_stack/min_stack.cpp)
add_executable(expression_expand ./expression_expand/expression_expand.cpp)
add_executable(ternary_parser ./ternary_parser/ternary_parser.cpp)
add_executable(out_of_order_string ./out_of_order_string/out_of_order_string.cpp)
add_executable(C++_reflection ./C++_reflection/C++_reflection.cpp)
add_executable(re_hash ./re_hash/re_hash.cpp)

add_executable(eigen_eigenvalues ./eigen_eigenvalues/eigen_eigenvalues.cpp)
target_link_libraries(eigen_eigenvalues ${OpenCV_LIBS})

add_executable(eat_noddle ./eat_noddle/eat_noddle.cpp)
add_executable(eat_food ./eat_food/eat_food.cpp)
add_executable(example_template ./example_template/example_template.cpp)
add_executable(binary_tree_vertical_traversal ./binary_tree_vertical_traversal/binary_tree_vertical_traversal.cpp)
add_executable(catch_card ./catch_card/catch_card.cpp)
add_executable(segment_tree ./segment_tree/segment_tree.cpp)
add_executable(litte_friend ./litte_friend/little_friend.cpp)
add_executable(segment_tree_2 ./segment_tree_2/segment_tree_2.cpp)
add_executable(search_max ./search_max/search_max.cpp)
add_executable(search_rotation_vector ./search_rotation_vector/search_rotation_vector.cpp)
add_executable(ugly_number ./ugly_number/ugly_number.cpp)
add_executable(binary_tree_search_interval ./binary_tree_search_interval/binary_tree_search_interval.cpp)
add_executable(cross_string ./cross_string/cross_string.cpp)
add_executable(maximum_subdirectory ./maximum_subdirectory/maximum_subdirectory.cpp)
add_executable(configurator ./configurator/configurator.cpp)
add_executable(buy_sell_stock ./buy_sell_stock/buy_sell_stock.cpp)
add_executable(buy_sell_stock_2 ./buy_sell_stock_2/buy_sell_stock_2.cpp)
add_executable(buy_sell_stock_3 ./buy_sell_stock_3/buy_sell_stock_3.cpp)
add_executable(maximum_subarray_difference ./maximum_subarray_difference/maximum_subarray_difference.cpp)
add_executable(character_case_order ./character_case_order/character_case_order.cpp)
add_executable(three_num_sum ./three_num_sum/three_sum_num.cpp)
add_executable(search_range ./search_range/search_range.cpp)
add_executable(search_rotation_sort_array ./search_rotation_sort_array/search_rotation_sort_array.cpp)
add_executable(longest_rising_subsequence ./longest_rising_subsequence/longest_rising_subsequence.cpp)
add_executable(longest_common_substring ./longest_common_substring/longest_common_substring.cpp)
add_executable(range_addition ./range_addition/range_addition.cpp)
add_executable(bag_question bag_question/bag_question.cpp)
add_executable(k_num_sum k_num_sum/k_num_sum.cpp)
add_executable(lowest_common_ancestor_binary_tree lowest_common_ancestor_binary_tree/lowest_common_ancestor_binary_tree.cpp)
add_executable(many_cpu many_cpu/many_cpu.cpp)
add_executable(buy_fruit buy_fruit/buy_fruit.cpp)